fix: increase base font size
Text is too small on small screens.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,6 +1,6 @@
 html {
   font-family: 'Source Serif Pro', serif;
-  font-size: 90%;
+  font-size: 100%;
   font-weight: 300;
   height: 100%;
 }
